TESTS = \
	test_advanced_le-001.xml \
	test_advanced_le-002.xml \
	test_advanced_le-003.xml \
	test_advanced_me-001.xml \
	test_advanced_me-002.xml \
	test_advanced_me-003.xml \
	test_atomic_all-001.xml \
	test_atomic_all-002.xml \
	test_atomic_all-003.xml \
	test_atomic_all-004.xml \
	test_atomic_all-005.xml \
	test_atomic_all-006.xml \
	test_atomic_all-007.xml \
	test_atomic_all-008.xml \
	test_atomic_all-009.xml \
	test_atomic_all-010.xml \
	test_atomic_all-011.xml \
	test_atomic_all-012.xml \
	test_atomic_all-013.xml \
	test_atomic_all-014.xml \
	test_atomic_all-015.xml \
	test_atomic_all-016.xml \
	test_atomic_all-017.xml \
	test_atomic_all-018.xml \
	test_atomic_all-019.xml \
	test_atomic_all-020.xml \
	test_atomic_all-021.xml \
	test_atomic_all-022.xml \
	test_atomic_all-023.xml \
	test_atomic_all-024.xml \
	test_atomic_all-025.xml \
	test_atomic_all-026.xml \
	test_atomic_all-027.xml \
	test_atomic_all-028.xml \
	test_atomic_all-029.xml \
	test_atomic_all-030.xml \
	test_atomic_all-031.xml \
	test_atomic_all-032.xml \
	test_atomic_all-033.xml \
	test_atomic_all-034.xml \
	test_atomic_all-035.xml \
	test_atomic_all-036.xml \
	test_atomic_all-037.xml \
	test_atomic_all-038.xml \
	test_atomic_all-039.xml \
	test_atomic_all-040.xml \
	test_atomic_all-041.xml \
	test_atomic_all-042.xml \
	test_atomic_all-043.xml \
	test_atomic_all-044.xml \
	test_atomic_all-045.xml \
	test_atomic_all-046.xml \
	test_atomic_all-047.xml \
	test_atomic_all-048.xml \
	test_atomic_all-049.xml \
	test_atomic_all-050.xml \
	test_atomic_all-051.xml \
	test_atomic_all-052.xml \
	test_atomic_all-053.xml \
	test_atomic_all-054.xml \
	test_atomic_all-055.xml \
	test_atomic_all-056.xml \
	test_atomic_all-057.xml \
	test_atomic_all-058.xml \
	test_atomic_all-059.xml \
	test_atomic_all-060.xml \
	test_atomic_all-061.xml \
	test_atomic_all-062.xml \
	test_atomic_all-063.xml \
	test_atomic_all-064.xml \
	test_atomic_all-065.xml \
	test_atomic_all-066.xml \
	test_atomic_all-067.xml \
	test_atomic_all-068.xml \
	test_atomic_all-069.xml \
	test_atomic_all-070.xml \
	test_atomic_all-071.xml \
	test_atomic_all-072.xml \
	test_atomic_all-073.xml \
	test_atomic_all-074.xml \
	test_atomic_all-075.xml \
	test_atomic_all-076.xml \
	test_atomic_all-077.xml \
	test_atomic_all-078.xml \
	test_atomic_all-079.xml \
	test_atomic_all-080.xml \
	test_atomic_all-081.xml \
	test_atomic_all-082.xml \
	test_atomic_all-083.xml \
	test_atomic_all-084.xml \
	test_atomic_all-085.xml \
	test_atomic_all-086.xml \
	test_atomic_all-087.xml \
	test_atomic_all-088.xml \
	test_atomic_all-089.xml \
	test_atomic_all-090.xml \
	test_atomic_all-091.xml \
	test_atomic_all-092.xml \
	test_atomic_all-093.xml \
	test_atomic_all-094.xml \
	test_atomic_all-095.xml \
	test_atomic_all-096.xml \
	test_atomic_all-097.xml \
	test_atomic_all-098.xml \
	test_atomic_all-099.xml \
	test_atomic_all-100.xml \
	test_atomic_all-101.xml \
	test_atomic_all-102.xml \
	test_atomic_all-103.xml \
	test_atomic_all-104.xml \
	test_atomic_all-105.xml \
	test_atomic_all-106.xml \
	test_atomic_all-107.xml \
	test_atomic_all-108.xml \
	test_atomic_all-109.xml \
	test_atomic_all-110.xml \
	test_atomic_all-111.xml \
	test_atomic_all-112.xml \
	test_atomic_all-113.xml \
	test_atomic_all-114.xml \
	test_atomic_all-115.xml \
	test_atomic_all-116.xml \
	test_atomic_all-117.xml \
	test_atomic_all-118.xml \
	test_atomic_all-119.xml \
	test_atomic_all-120.xml \
	test_atomic_all-121.xml \
	test_atomic_all-122.xml \
	test_atomic_all-123.xml \
	test_atomic_all-124.xml \
	test_atomic_all-125.xml \
	test_atomic_all-126.xml \
	test_atomic_all-127.xml \
	test_atomic_all-128.xml \
	test_atomic_all-129.xml \
	test_atomic_all-130.xml \
	test_atomic_all-131.xml \
	test_atomic_all-132.xml \
	test_atomic_all-133.xml \
	test_atomic_all-134.xml \
	test_atomic_all-135.xml \
	test_atomic_all-136.xml \
	test_atomic_all-137.xml \
	test_atomic_all-138.xml \
	test_atomic_all-139.xml \
	test_atomic_all-140.xml \
	test_atomic_all-141.xml \
	test_atomic_all-142.xml \
	test_atomic_all-143.xml \
	test_atomic_all-144.xml \
	test_atomic_all-145.xml \
	test_atomic_all-146.xml \
	test_atomic_all-147.xml \
	test_atomic_all-148.xml \
	test_atomic_all-149.xml \
	test_atomic_all-150.xml \
	test_atomic_all-151.xml \
	test_atomic_all-152.xml \
	test_atomic_all-153.xml \
	test_atomic_all-154.xml \
	test_atomic_all-155.xml \
	test_atomic_all-156.xml \
	test_atomic_all-157.xml \
	test_atomic_all-158.xml \
	test_atomic_all-159.xml \
	test_atomic_all-160.xml \
	test_atomic_all-161.xml \
	test_atomic_all-162.xml \
	test_atomic_all-163.xml \
	test_atomic_all-164.xml \
	test_atomic_all-165.xml \
	test_atomic_all-166.xml \
	test_atomic_all-167.xml \
	test_atomic_all-168.xml \
	test_atomic_all-169.xml \
	test_atomic_all-170.xml \
	test_atomic_all-171.xml \
	test_atomic_all-172.xml \
	test_atomic_all-173.xml \
	test_atomic_all-174.xml \
	test_atomic_all-175.xml \
	test_atomic_all-176.xml \
	test_atomic_all-177.xml \
	test_atomic_all-178.xml \
	test_atomic_all-179.xml \
	test_atomic_all-180.xml \
	test_atomic_all-181.xml \
	test_atomic_all-182.xml \
	test_atomic_all-183.xml \
	test_atomic_all-184.xml \
	test_atomic_all-185.xml \
	test_atomic_all-186.xml \
	test_atomic_all-187.xml \
	test_atomic_all-188.xml \
	test_atomic_all-189.xml \
	test_atomic_all-190.xml \
	test_atomic_all-191.xml \
	test_atomic_all-192.xml \
	test_atomic_all-193.xml \
	test_atomic_all-194.xml \
	test_atomic_all-195.xml \
	test_atomic_all-196.xml \
	test_atomic_logical_lb-001.xml \
	test_atomic_logical_lb-002.xml \
	test_atomic_logical_lb-003.xml \
	test_atomic_logical_lb-004.xml \
	test_atomic_logical_lb-005.xml \
	test_atomic_logical_lb-006.xml \
	test_atomic_logical_lb-007.xml \
	test_atomic_logical_lb-008.xml \
	test_atomic_logical_lb-009.xml \
	test_atomic_logical_lb-010.xml \
	test_atomic_physical_lb-001.xml \
	test_atomic_physical_lb-002.xml \
	test_atomic_physical_lb-003.xml \
	test_atomic_physical_lb-004.xml \
	test_atomic_physical_lb-005.xml \
	test_atomic_physical_lb-006.xml \
	test_atomic_physical_lb-007.xml \
	test_atomic_physical_lb-008.xml \
	test_atomic_physical_lb-009.xml \
	test_atomic_physical_lb-010.xml \
	test_basic_bundle-001.xml \
	test_basic_bundle-002.xml \
	test_basic_bundle-003.xml \
	test_basic_bundle-004.xml \
	test_basic_ct-001.xml \
	test_basic_ct-002.xml \
	test_basic_ct-003.xml \
	test_basic_ct-004.xml \
	test_basic_ct-005.xml \
	test_basic_ct-006.xml \
	test_basic_ct-007.xml \
	test_basic_ct-008.xml \
	test_basic_ct-009.xml \
	test_basic_ct-010.xml \
	test_basic_ct-011.xml \
	test_basic_ct-012.xml \
	test_basic_ct-013.xml \
	test_basic_ct-014.xml \
	test_basic_ct-015.xml \
	test_basic_ct-016.xml \
	test_basic_ct-017.xml \
	test_basic_ct-018.xml \
	test_basic_ct-019.xml \
	test_basic_ct-020.xml \
	test_basic_ct-021.xml \
	test_basic_ct-022.xml \
	test_basic_ct-023.xml \
	test_basic_ct-024.xml \
	test_basic_ct-025.xml \
	test_basic_ct-026.xml \
	test_basic_ct-027.xml \
	test_basic_ct-028.xml \
	test_basic_ct-029.xml \
	test_basic_ct-030.xml \
	test_basic_ct-031.xml \
	test_basic_ct-032.xml \
	test_basic_ct-033.xml \
	test_basic_ct-034.xml \
	test_basic_ct-035.xml \
	test_basic_ct-036.xml \
	test_basic_ct-037.xml \
	test_basic_ct-038.xml \
	test_basic_ct-039.xml \
	test_basic_ct-040.xml \
	test_basic_ct-041.xml \
	test_basic_ct-042.xml \
	test_basic_ct-043.xml \
	test_basic_ct-044.xml \
	test_basic_eq-001.xml \
	test_basic_eq-002.xml \
	test_basic_eq-003.xml \
	test_basic_eq-004.xml \
	test_basic_eq-005.xml \
	test_basic_eq-006.xml \
	test_basic_eq-007.xml \
	test_basic_eq-008.xml \
	test_basic_eq-009.xml \
	test_basic_eq-010.xml \
	test_basic_eq-011.xml \
	test_basic_eq-012.xml \
	test_basic_eq-013.xml \
	test_basic_eq-014.xml \
	test_basic_eq-015.xml \
	test_basic_handle-001.xml \
	test_basic_handle-002.xml \
	test_basic_id-001.xml \
	test_basic_id-002.xml \
	test_basic_id-003.xml \
	test_basic_id-004.xml \
	test_basic_id-005.xml \
	test_basic_id-006.xml \
	test_basic_init-001.xml \
	test_basic_init-002.xml \
	test_basic_init-003.xml \
	test_basic_le-001.xml \
	test_basic_le-002.xml \
	test_basic_le-003.xml \
	test_basic_le-004.xml \
	test_basic_le-005.xml \
	test_basic_le-006.xml \
	test_basic_le-007.xml \
	test_basic_le-008.xml \
	test_basic_le-009.xml \
	test_basic_le-010.xml \
	test_basic_le-011.xml \
	test_basic_le-012.xml \
	test_basic_le-013.xml \
	test_basic_le-014.xml \
	test_basic_le-015.xml \
	test_basic_le-016.xml \
	test_basic_le-017.xml \
	test_basic_le-018.xml \
	test_basic_le-019.xml \
	test_basic_le-020.xml \
	test_basic_le-021.xml \
	test_basic_le-022.xml \
	test_basic_md-001.xml \
	test_basic_md-002.xml \
	test_basic_md-003.xml \
	test_basic_md-004.xml \
	test_basic_md-005.xml \
	test_basic_md-006.xml \
	test_basic_md-007.xml \
	test_basic_md-008.xml \
	test_basic_md-009.xml \
	test_basic_me-001.xml \
	test_basic_me-002.xml \
	test_basic_me-003.xml \
	test_basic_me-004.xml \
	test_basic_me-005.xml \
	test_basic_me-006.xml \
	test_basic_me-007.xml \
	test_basic_me-008.xml \
	test_basic_me-009.xml \
	test_basic_me-010.xml \
	test_basic_me-011.xml \
	test_basic_me-012.xml \
	test_basic_me-013.xml \
	test_basic_me-014.xml \
	test_basic_me-015.xml \
	test_basic_me-016.xml \
	test_basic_me-017.xml \
	test_basic_me-018.xml \
	test_basic_me-019.xml \
	test_basic_me-020.xml \
	test_basic_me-021.xml \
	test_basic_me-022.xml \
	test_basic_move-001.xml \
	test_basic_move-002.xml \
	test_basic_move-003.xml \
	test_basic_move-004.xml \
	test_basic_move-005.xml \
	test_basic_move-006.xml \
	test_basic_move-007.xml \
	test_basic_move-008.xml \
	test_basic_move-009.xml \
	test_basic_move-010.xml \
	test_basic_move-011.xml \
	test_basic_move-012.xml \
	test_basic_move-013.xml \
	test_basic_move-014.xml \
	test_basic_move-015.xml \
	test_basic_move-016.xml \
	test_basic_move-017.xml \
	test_basic_move-018.xml \
	test_basic_move-019.xml \
	test_basic_move-020.xml \
	test_basic_move-021.xml \
	test_basic_move-022.xml \
	test_basic_move-023.xml \
	test_basic_move-024.xml \
	test_basic_move-025.xml \
	test_basic_move-026.xml \
	test_basic_move-027.xml \
	test_basic_move-028.xml \
	test_basic_move-029.xml \
	test_basic_move-030.xml \
	test_basic_move-031.xml \
	test_basic_move-032.xml \
	test_basic_move-033.xml \
	test_basic_move-034.xml \
	test_basic_move-035.xml \
	test_basic_move-036.xml \
	test_basic_ni-001.xml \
	test_basic_ni-002.xml \
	test_basic_ni-003.xml \
	test_basic_ni-004.xml \
	test_basic_ni-005.xml \
	test_basic_ni-006.xml \
	test_basic_ni-007.xml \
	test_basic_ni-008.xml \
	test_basic_ni-009.xml \
	test_basic_ni-010.xml \
	test_basic_ni-011.xml \
	test_basic_ni-012.xml \
	test_basic_ni-013.xml \
	test_basic_ni-014.xml \
	test_basic_ni-015.xml \
	test_basic_ni-016.xml \
	test_basic_ni-017.xml \
	test_basic_ni-018.xml \
	test_basic_ni-019.xml \
	test_basic_pt-001.xml \
	test_basic_pt-002.xml \
	test_basic_pt-003.xml \
	test_basic_pt-004.xml \
	test_basic_pt-005.xml \
	test_basic_pt-006.xml \
	test_basic_pt-007.xml \
	test_basic_pt-008.xml \
	test_basic_pt-009.xml \
	test_basic_pt-010.xml \
	test_basic_pt-011.xml \
	test_basic_pt-012.xml \
	test_basic_pt-013.xml \
	test_basic_pt-014.xml \
	test_basic_pt-015.xml \
	test_basic_pt-016.xml \
	test_basic_pt-017.xml \
	test_basic_pt-018.xml \
	test_basic_pt-019.xml \
	test_basic_pt-020.xml \
	test_basic_pt-021.xml \
	test_basic_pt-022.xml \
	test_basic_pt-023.xml \
	test_basic_pt-024.xml \
	test_basic_pt-025.xml \
	test_basic_pt-026.xml \
	test_basic_trig-001.xml \
	test_basic_trig-002.xml \
	test_basic_trig-003.xml \
	test_basic_trig-004.xml \
	test_basic_trig-005.xml \
	test_basic_trig-006.xml \
	test_basic_trig-007.xml \
	test_basic_trig-008.xml \
	test_basic_trig-009.xml \
	test_basic_trig-010.xml \
	test_basic_trig-011.xml \
	test_basic_trig-012.xml \
	test_basic_trig-013.xml \
	test_basic_trig-014.xml \
	test_basic_trig-015.xml \
	test_basic_trig-016.xml \
	test_basic_trig-017.xml \
	test_basic_trig-018.xml \
	test_basic_trig-019.xml \
	test_ct_events-001.xml \
	test_ct_events-002.xml \
	test_ct_events-003.xml \
	test_ct_events-004.xml \
	test_ct_events-005.xml \
	test_ct_events-006.xml \
	test_ct_events-007.xml \
	test_ct_events-008.xml \
	test_ct_events-009.xml \
	test_ct_events-010.xml \
	test_ct_events-011.xml \
	test_ct_events-012.xml \
	test_ct_events-013.xml \
	test_ct_events-014.xml \
	test_ct_events-015.xml \
	test_ct_events-016.xml \
	test_ct_events-017.xml \
	test_ct_events-018.xml \
	test_ct_events-019.xml \
	test_ct_events-020.xml \
	test_ct_events-021.xml \
	test_ct_events-022.xml \
	test_ct_events-023.xml \
	test_ct_events-024.xml \
	test_ct_events-025.xml \
	test_ct_events-026.xml \
	test_ct_events-027.xml \
	test_ct_events-028.xml \
	test_ct_events-029.xml \
	test_ct_events-030.xml \
	test_ct_events-031.xml \
	test_ct_events-032.xml \
	test_ct_events-033.xml \
	test_ct_events-034.xml \
	test_ct_events-035.xml \
	test_ct_events-036.xml \
	test_ct_events-037.xml \
	test_ct_events-038.xml \
	test_ct_events-039.xml \
	test_ct_events-040.xml \
	test_ct_events-041.xml \
	test_ct_events-042.xml \
	test_ct_events-043.xml \
	test_ct_events-044.xml \
	test_ct_events-045.xml \
	test_ct_events-046.xml \
	test_ct_events-047.xml \
	test_ct_events-048.xml \
	test_ct_events-049.xml \
	test_limits-001.xml \
	test_limits-002.xml \
	test_limits-003.xml \
	test_limits-004.xml \
	test_limits-005.xml \
	test_limits-006.xml \
	test_limits-007.xml \
	test_limits-008.xml \
	test_limits-009.xml \
	test_limits-010.xml \
	test_limits-011.xml \
	test_limits-012.xml \
	test_limits-013.xml \
	test_limits-014.xml \
	test_limits-015.xml \
	test_limits-016.xml \
	test_limits-017.xml \
	test_limits-018.xml \
	test_limits-019.xml \
	test_limits-020.xml \
	test_limits-021.xml \
	test_limits-022.xml \
	test_limits-023.xml \
	test_limits-024.xml \
	test_limits-025.xml \
	test_limits-026.xml \
	test_limits-027.xml \
	test_limits-028.xml \
	test_limits-029.xml \
	test_limits-030.xml \
	test_limits-031.xml \
	test_limits-032.xml \
	test_limits-033.xml \
	test_limits-034.xml \
	test_limits-035.xml \
	test_limits-036.xml \
	test_limits-037.xml \
	test_limits-038.xml \
	test_limits-039.xml \
	test_limits-040.xml \
	test_limits-041.xml \
	test_limits-042.xml \
	test_limits-043.xml \
	test_limits-044.xml \
	test_limits-045.xml \
	test_limits-046.xml \
	test_mapping-001.xml \
	test_mapping-002.xml \
	test_mapping-003.xml \
	test_short-001.xml \
	test_short-002.xml \
	test_swap_all-001.xml \
	test_swap_all-002.xml \
	test_swap_all-003.xml \
	test_swap_all-004.xml \
	test_swap_all-005.xml \
	test_swap_all-006.xml \
	test_swap_all-007.xml \
	test_swap_all-008.xml \
	test_swap_all-009.xml \
	test_swap_all-010.xml \
	test_swap_all-011.xml \
	test_swap_all-012.xml \
	test_swap_all-013.xml \
	test_swap_all-014.xml \
	test_swap_all-015.xml \
	test_swap_all-016.xml \
	test_swap_all-017.xml \
	test_swap_all-018.xml \
	test_swap_all-019.xml \
	test_swap_all-020.xml \
	test_swap_all-021.xml \
	test_swap_all-022.xml \
	test_swap_all-023.xml \
	test_swap_all-024.xml \
	test_swap_all-025.xml \
	test_swap_all-026.xml \
	test_swap_all-027.xml \
	test_swap_all-028.xml \
	test_swap_all-029.xml \
	test_swap_all-030.xml \
	test_swap_all-031.xml \
	test_swap_all-032.xml \
	test_swap_all-033.xml \
	test_swap_all-034.xml \
	test_swap_all-035.xml \
	test_swap_all-036.xml \
	test_swap_all-037.xml \
	test_swap_all-038.xml \
	test_swap_all-039.xml \
	test_swap_all-040.xml \
	test_swap_all-041.xml \
	test_swap_all-042.xml \
	test_swap_all-043.xml \
	test_swap_all-044.xml \
	test_swap_all-045.xml \
	test_swap_all-046.xml \
	test_swap_all-047.xml \
	test_swap_all-048.xml \
	test_swap_all-049.xml \
	test_swap_all-050.xml \
	test_swap_all-051.xml \
	test_swap_all-052.xml \
	test_swap_all-053.xml \
	test_swap_all-054.xml \
	test_swap_all-055.xml \
	test_swap_all-056.xml \
	test_swap_all-057.xml \
	test_swap_all-058.xml \
	test_swap_all-059.xml \
	test_swap_all-060.xml \
	test_swap_all-061.xml \
	test_swap_all-062.xml \
	test_swap_all-063.xml \
	test_swap_all-064.xml \
	test_swap_all-065.xml \
	test_swap_all-066.xml \
	test_swap_all-067.xml \
	test_swap_all-068.xml \
	test_swap_all-069.xml \
	test_swap_all-070.xml \
	test_swap_all-071.xml \
	test_swap_all-072.xml \
	test_swap_all-073.xml \
	test_swap_all-074.xml \
	test_swap_all-075.xml \
	test_swap_all-076.xml \
	test_swap_all-077.xml \
	test_swap_all-078.xml \
	test_swap_all-079.xml \
	test_swap_all-080.xml \
	test_swap_all-081.xml \
	test_swap_all-082.xml \
	test_swap_all-083.xml \
	test_swap_all-084.xml \
	test_swap_all-085.xml \
	test_swap_all-086.xml \
	test_swap_all-087.xml \
	test_swap_all-088.xml \
	test_swap_all-089.xml \
	test_swap_all-090.xml \
	test_swap_all-091.xml \
	test_swap_all-092.xml \
	test_swap_all-093.xml \
	test_swap_all-094.xml \
	test_swap_all-095.xml \
	test_swap_all-096.xml \
	test_swap_all-097.xml \
	test_swap_all-098.xml \
	test_swap_all-099.xml \
	test_swap_all-100.xml \
	test_swap_all-101.xml \
	test_swap_all-102.xml \
	test_swap_all-103.xml \
	test_swap_all-104.xml \
	test_swap_all-105.xml \
	test_swap_all-106.xml \
	test_swap_all-107.xml \
	test_swap_all-108.xml \
	test_swap_all-109.xml \
	test_swap_all-110.xml \
	test_swap_all-111.xml \
	test_swap_all-112.xml \
	test_swap_all-113.xml \
	test_swap_all-114.xml \
	test_swap_all-115.xml \
	test_swap_all-116.xml \
	test_swap_all-117.xml \
	test_swap_all-118.xml \
	test_swap_all-119.xml \
	test_swap_all-120.xml \
	test_swap_all-121.xml \
	test_swap_all-122.xml \
	test_swap_all-123.xml \
	test_swap_all-124.xml \
	test_swap_all-125.xml \
	test_swap_all-126.xml \
	test_swap_all-127.xml \
	test_swap_all-128.xml \
	test_swap_all-129.xml \
	test_swap_all-130.xml \
	test_swap_all-131.xml \
	test_swap_all-132.xml \
	test_swap_all-133.xml \
	test_swap_all-134.xml \
	test_swap_all-135.xml \
	test_swap_all-136.xml \
	test_swap_all-137.xml \
	test_swap_all-138.xml \
	test_swap_all-139.xml \
	test_swap_all-140.xml \
	test_swap_all-141.xml \
	test_swap_all-142.xml \
	test_swap_all-143.xml \
	test_swap_all-144.xml \
	test_swap_all-145.xml \
	test_swap_all-146.xml \
	test_swap_all-147.xml \
	test_swap_all-148.xml \
	test_swap_all-149.xml \
	test_swap_all-150.xml \
	test_swap_all-151.xml \
	test_swap_all-152.xml \
	test_swap_all-153.xml \
	test_swap_all-154.xml \
	test_swap_all-155.xml \
	test_swap_all-156.xml \
	test_swap_all-157.xml \
	test_swap_all-158.xml \
	test_swap_all-159.xml \
	test_swap_all-160.xml \
	test_swap_all-161.xml \
	test_swap_all-162.xml \
	test_swap_all-163.xml \
	test_swap_all-164.xml \
	test_swap_all-165.xml \
	test_swap_all-166.xml \
	test_swap_all-167.xml \
	test_swap_all-168.xml \
	test_swap_all-169.xml \
	test_swap_all-170.xml \
	test_swap_all-171.xml \
	test_swap_all-172.xml \
	test_swap_all-173.xml \
	test_swap_all-174.xml \
	test_swap_all-175.xml \
	test_swap_all-176.xml \
	test_swap_all-177.xml \
	test_swap_all-178.xml \
	test_swap_all-179.xml \
	test_swap_all-180.xml \
	test_swap_all-181.xml \
	test_swap_all-182.xml \
	test_swap_all-183.xml \
	test_swap_all-184.xml \
	test_swap_all-185.xml \
	test_swap_all-186.xml \
	test_swap_all-187.xml \
	test_swap_all-188.xml \
	test_swap_all-189.xml \
	test_swap_all-190.xml \
	test_swap_all-191.xml \
	test_swap_all-192.xml \
	test_swap_all-193.xml \
	test_swap_all-194.xml \
	test_swap_all-195.xml \
	test_swap_all-196.xml \
	test_swap_all-197.xml \
	test_swap_all-198.xml \
	test_swap_all-199.xml \
	test_swap_all-200.xml \
	test_swap_all-201.xml \
	test_swap_all-202.xml \
	test_swap_all-203.xml \
	test_swap_all-204.xml \
	test_swap_all-205.xml \
	test_swap_all-206.xml \
	test_swap_all-207.xml \
	test_swap_all-208.xml \
	test_swap_all-209.xml \
	test_swap_all-210.xml \
	test_swap_logical_lb-001.xml \
	test_swap_logical_lb-002.xml \
	test_swap_logical_lb-003.xml \
	test_swap_logical_lb-004.xml \
	test_swap_logical_lb-005.xml \
	test_swap_logical_lb-006.xml \
	test_swap_logical_lb-007.xml \
	test_swap_logical_lb-008.xml \
	test_swap_logical_lb-009.xml \
	test_swap_logical_lb-010.xml \
	test_swap_logical_lb-011.xml \
	test_swap_logical_lb-012.xml \
	test_swap_logical_lb-013.xml \
	test_swap_logical_lb-014.xml \
	test_swap_logical_lb-015.xml \
	test_swap_logical_lb-016.xml \
	test_swap_logical_lb-017.xml \
	test_swap_logical_lb-018.xml \
	test_swap_logical_lb-019.xml \
	test_swap_logical_lb-020.xml \
	test_swap_logical_lb-021.xml \
	test_swap_logical_lb-022.xml \
	test_swap_logical_lb-023.xml \
	test_swap_logical_lb-024.xml \
	test_swap_logical_lb-025.xml \
	test_swap_logical_lb-026.xml \
	test_swap_logical_lb-027.xml \
	test_swap_logical_lb-028.xml \
	test_swap_logical_lb-029.xml \
	test_swap_logical_lb-030.xml \
	test_swap_logical_lb-031.xml \
	test_swap_logical_lb-032.xml \
	test_swap_logical_lb-033.xml \
	test_swap_logical_lb-034.xml \
	test_swap_logical_lb-035.xml \
	test_swap_logical_lb-036.xml \
	test_swap_logical_lb-037.xml \
	test_swap_logical_lb-038.xml \
	test_swap_logical_lb-039.xml \
	test_swap_logical_lb-040.xml \
	test_swap_logical_lb-041.xml \
	test_swap_logical_lb-042.xml \
	test_swap_logical_lb-043.xml \
	test_swap_logical_lb-044.xml \
	test_swap_logical_lb-045.xml \
	test_swap_logical_lb-046.xml \
	test_swap_logical_lb-047.xml \
	test_swap_logical_lb-048.xml \
	test_swap_logical_lb-049.xml \
	test_swap_logical_lb-050.xml \
	test_swap_logical_lb-051.xml \
	test_swap_logical_lb-052.xml \
	test_swap_logical_lb-053.xml \
	test_swap_logical_lb-054.xml \
	test_swap_logical_lb-055.xml \
	test_swap_logical_lb-056.xml \
	test_swap_logical_lb-057.xml \
	test_swap_logical_lb-058.xml \
	test_swap_logical_lb-059.xml \
	test_swap_logical_lb-060.xml \
	test_swap_logical_lb-061.xml \
	test_swap_logical_lb-062.xml \
	test_swap_logical_lb-063.xml \
	test_swap_logical_lb-064.xml \
	test_swap_logical_lb-065.xml \
	test_swap_logical_lb-066.xml \
	test_swap_logical_lb-067.xml \
	test_swap_logical_lb-068.xml \
	test_swap_logical_lb-069.xml \
	test_swap_logical_lb-070.xml \
	test_swap_logical_lb-071.xml \
	test_swap_logical_lb-072.xml \
	test_swap_logical_lb-073.xml \
	test_swap_logical_lb-074.xml \
	test_swap_logical_lb-075.xml \
	test_swap_logical_lb-076.xml \
	test_swap_logical_lb-077.xml \
	test_swap_logical_lb-078.xml \
	test_swap_logical_lb-079.xml \
	test_swap_logical_lb-080.xml \
	test_swap_logical_lb-081.xml \
	test_swap_logical_lb-082.xml \
	test_swap_logical_lb-083.xml \
	test_swap_logical_lb-084.xml \
	test_swap_logical_lb-085.xml \
	test_swap_logical_lb-086.xml \
	test_swap_logical_lb-087.xml \
	test_swap_logical_lb-088.xml \
	test_swap_logical_lb-089.xml \
	test_swap_logical_lb-090.xml \
	test_swap_logical_lb-091.xml \
	test_swap_logical_lb-092.xml \
	test_swap_logical_lb-093.xml \
	test_swap_logical_lb-094.xml \
	test_swap_logical_lb-095.xml \
	test_swap_logical_lb-096.xml \
	test_swap_logical_lb-097.xml \
	test_swap_logical_lb-098.xml \
	test_swap_logical_lb-099.xml \
	test_swap_logical_lb-100.xml \
	test_swap_physical_lb-001.xml \
	test_swap_physical_lb-002.xml \
	test_swap_physical_lb-003.xml \
	test_swap_physical_lb-004.xml \
	test_swap_physical_lb-005.xml \
	test_swap_physical_lb-006.xml \
	test_swap_physical_lb-007.xml \
	test_swap_physical_lb-008.xml \
	test_swap_physical_lb-009.xml \
	test_swap_physical_lb-010.xml \
	test_swap_physical_lb-011.xml \
	test_swap_physical_lb-012.xml \
	test_swap_physical_lb-013.xml \
	test_swap_physical_lb-014.xml \
	test_swap_physical_lb-015.xml \
	test_swap_physical_lb-016.xml \
	test_swap_physical_lb-017.xml \
	test_swap_physical_lb-018.xml \
	test_swap_physical_lb-019.xml \
	test_swap_physical_lb-020.xml \
	test_swap_physical_lb-021.xml \
	test_swap_physical_lb-022.xml \
	test_swap_physical_lb-023.xml \
	test_swap_physical_lb-024.xml \
	test_swap_physical_lb-025.xml \
	test_swap_physical_lb-026.xml \
	test_swap_physical_lb-027.xml \
	test_swap_physical_lb-028.xml \
	test_swap_physical_lb-029.xml \
	test_swap_physical_lb-030.xml \
	test_swap_physical_lb-031.xml \
	test_swap_physical_lb-032.xml \
	test_swap_physical_lb-033.xml \
	test_swap_physical_lb-034.xml \
	test_swap_physical_lb-035.xml \
	test_swap_physical_lb-036.xml \
	test_swap_physical_lb-037.xml \
	test_swap_physical_lb-038.xml \
	test_swap_physical_lb-039.xml \
	test_swap_physical_lb-040.xml \
	test_swap_physical_lb-041.xml \
	test_swap_physical_lb-042.xml \
	test_swap_physical_lb-043.xml \
	test_swap_physical_lb-044.xml \
	test_swap_physical_lb-045.xml \
	test_swap_physical_lb-046.xml \
	test_swap_physical_lb-047.xml \
	test_swap_physical_lb-048.xml \
	test_swap_physical_lb-049.xml \
	test_swap_physical_lb-050.xml \
	test_swap_physical_lb-051.xml \
	test_swap_physical_lb-052.xml \
	test_swap_physical_lb-053.xml \
	test_swap_physical_lb-054.xml \
	test_swap_physical_lb-055.xml \
	test_swap_physical_lb-056.xml \
	test_swap_physical_lb-057.xml \
	test_swap_physical_lb-058.xml \
	test_swap_physical_lb-059.xml \
	test_swap_physical_lb-060.xml \
	test_swap_physical_lb-061.xml \
	test_swap_physical_lb-062.xml \
	test_swap_physical_lb-063.xml \
	test_swap_physical_lb-064.xml \
	test_swap_physical_lb-065.xml \
	test_swap_physical_lb-066.xml \
	test_swap_physical_lb-067.xml \
	test_swap_physical_lb-068.xml \
	test_swap_physical_lb-069.xml \
	test_swap_physical_lb-070.xml \
	test_swap_physical_lb-071.xml \
	test_swap_physical_lb-072.xml \
	test_swap_physical_lb-073.xml \
	test_swap_physical_lb-074.xml \
	test_swap_physical_lb-075.xml \
	test_swap_physical_lb-076.xml \
	test_swap_physical_lb-077.xml \
	test_swap_physical_lb-078.xml \
	test_swap_physical_lb-079.xml \
	test_swap_physical_lb-080.xml \
	test_swap_physical_lb-081.xml \
	test_swap_physical_lb-082.xml \
	test_swap_physical_lb-083.xml \
	test_swap_physical_lb-084.xml \
	test_swap_physical_lb-085.xml \
	test_swap_physical_lb-086.xml \
	test_swap_physical_lb-087.xml \
	test_swap_physical_lb-088.xml \
	test_swap_physical_lb-089.xml \
	test_swap_physical_lb-090.xml \
	test_swap_physical_lb-091.xml \
	test_swap_physical_lb-092.xml \
	test_swap_physical_lb-093.xml \
	test_swap_physical_lb-094.xml \
	test_swap_physical_lb-095.xml \
	test_swap_physical_lb-096.xml \
	test_swap_physical_lb-097.xml \
	test_swap_physical_lb-098.xml \
	test_swap_physical_lb-099.xml \
	test_swap_physical_lb-100.xml \
	test_unlink-001.xml \
	test_unlink-002.xml \
	test_unlink-003.xml \
	test_unlink-004.xml \
	test_unlink-005.xml \
	test_unlink-006.xml \
	test_unlink-007.xml \
	test_unlink-008.xml \
	test_unlink-009.xml \
	test_unlink-010.xml \
	test_unlink-011.xml \
	test_unlink-012.xml \
	test_unlink-013.xml \
	test_unlink-014.xml \
	test_unlink-015.xml \
	test_unlink-016.xml \
	test_unlink-017.xml \
	test_unlink-018.xml \
	test_unlink-019.xml \
	test_unlink-020.xml

EXTRA_DIST = $(TESTS)

TEST_EXTENSIONS = .xml
XML_LOG_COMPILER = ../ptl_test -b $(srcdir)/ -f
AM_XML_LOG_FLAGS = 

TESTS_ENVIRONMENT = echo $(top_builddir)/src/runtime/hydra/yod.hydra -np 1
